--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+ollama==0.6.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
