--- a/requirements.txt
+++ b/requirements.txt
@@ -5,36 +5,53 @@ beautifulsoup4==4.14.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
+dill==0.4.0
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.120.4
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+grpcio==1.76.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.11
 Jinja2==3.1.6
+joblib==1.5.2
+kuzu==0.11.3
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+mpire==2.10.2
+multiprocess==0.70.18
+nltk==3.9.2
+numpy==2.3.4
 ollama==0.6.0
+portalocker==3.2.0
+protobuf==6.33.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 Pygments==2.19.2
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
+qdrant-client==1.15.1
+regex==2025.11.3
 requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.15.1
 rignore==0.7.3
+semchunk==3.2.5
 sentry-sdk==2.43.0
 shellingham==1.5.4
 sniffio==1.3.1
 soupsieve==2.8
 starlette==0.49.2
+tqdm==4.67.1
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
