--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "kuzu>=0.11.3",
     "nltk>=3.9.2",
     "ollama>=0.6.0",
+    "pytest>=9.0.0",
     "qdrant-client>=1.15.1",
     "requests>=2.32.5",
+    "selenium>=4.38.0",
+    "semchunk>=3.2.5",
 ]
